--- a/src/pages/SendINRLandingPage/index.module.scss
+++ b/src/pages/SendINRLandingPage/index.module.scss
@@ -500,8 +500,7 @@ input:focus {
 }
 .backgroundLeftImageInMobile {
   position: absolute;
-  margin-left: -445px;
-  margin-top: -104px;
+  margin-top: -130px;
 }
 .backgroundLeftImageSimpleStyleSection {
   position: absolute;
