--- a/src/pages/WhyPayezy/index.module.scss
+++ b/src/pages/WhyPayezy/index.module.scss
@@ -217,71 +217,71 @@
 .feauturesSubContainer:nth-child(3) {
   animation-delay: 0.9s; /* Delay the animation for the third div by 0.3s */
 }
-@media screen and (min-width: 1380px) {
-  .feauturesSubContainer {
-    width: 350px;
-    height: 190px;
-  }
-}
+// @media screen and (min-width: 1380px) {
+//   .feauturesSubContainer {
+//     width: 350px;
+//     height: 190px;
+//   }
+// }
+// @media screen and (min-width: 1100px) {
+//   .feauturesSubContainer {
+//     width: 250px;
+//     height: 189px;
+//   }
+//   .featuresText {
+//     font-size: 12px;
+//   }
+// }
+// /* Styles for viewport width 1420px and wider */
+// @media screen and (min-width: 1420px) {
+//   .feauturesSubContainer {
+//     width: 363px;
+//     height: 172px;
+//   }
+// }
+// @media screen and (min-width: 1500px) {
+//   .feauturesSubContainer {
+//     width: 380px;
+//     height: 149px;
+//   }
+// }
+// @media screen and (min-width: 1550px) {
+//   .feauturesSubContainer {
+//     width: 400px;
+//     height: 152px;
+//   }
+// }
+// @media screen and (min-width: 1600px) {
+//   .feauturesSubContainer {
+//     width: 430px;
+//     height: 146px;
+//   }
+// }
+// @media screen and (min-width: 1300px) {
+//   .feauturesSubContainer {
+//     width: 330px;
+//     height: 166px;
+//   }
+//   .featuresText {
+//     font-size: 16px;
+//   }
+// }
+// @media screen and (min-width: 1200px) {
+//   .feauturesSubContainer {
+//     width: 300px;
+//     height: 166px;
+//   }
+//   .featuresText {
+//     font-size: 14px;
+//   }
+// }
 
-/* Styles for viewport width 1420px and wider */
-@media screen and (min-width: 1420px) {
-  .feauturesSubContainer {
-    width: 363px;
-    height: 172px;
-  }
-}
-@media screen and (min-width: 1500px) {
-  .feauturesSubContainer {
-    width: 380px;
-    height: 149px;
-  }
-}
-@media screen and (min-width: 1550px) {
-  .feauturesSubContainer {
-    width: 400px;
-    height: 152px;
-  }
-}
-@media screen and (min-width: 1600px) {
-  .feauturesSubContainer {
-    width: 430px;
-    height: 146px;
-  }
-}
-@media screen and (min-width: 1300px) {
-  .feauturesSubContainer {
-    width: 330px;
-    height: 166px;
-  }
-  .featuresText {
-    font-size: 16px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .feauturesSubContainer {
-    width: 300px;
-    height: 166px;
-  }
-  .featuresText {
-    font-size: 14px;
-  }
-}
-@media screen and (min-width: 1100px) {
-  .feauturesSubContainer {
-    width: 250px;
-    height: 189px;
-  }
-  .featuresText {
-    font-size: 12px;
-  }
-}
-@media screen and (min-width: 992px) {
-  .feauturesSubContainer {
-    width: 230px;
-    height: 189px;
-  }
-  .featuresText {
-    font-size: 12px;
-  }
-}
+// @media screen and (min-width: 992px) {
+//   .feauturesSubContainer {
+//     width: 230px;
+//     height: 189px;
+//   }
+//   .featuresText {
+//     font-size: 12px;
+//   }
+// }
